<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="20dp"
              android:paddingTop="20dp"
        >
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/first_sorting"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:gravity="center">
        <Spinner android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:id="@+id/spinner_first">
        </Spinner>
        <RadioGroup android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/first_radio_group"
                    android:visibility="invisible"
                    android:orientation="horizontal">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:checked="true"
                         android:id="@+id/first_sort_asc"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:id="@+id/first_sort_desc"/>
        </RadioGroup>
    </LinearLayout>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/second_sorting"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Spinner android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:id="@+id/spinner_second"
                >
        </Spinner>
        <RadioGroup android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/second_radio_group"
                    android:visibility="invisible"
                    android:orientation="horizontal">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:checked="true"
                         android:id="@+id/second_sort_asc"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:id="@+id/second_sort_desc"/>
        </RadioGroup>
    </LinearLayout>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/last_sorting"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <Spinner android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:id="@+id/spinner_last"
                >
        </Spinner>
        <RadioGroup android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/last_radio_group"
                    android:visibility="invisible"
                    android:orientation="horizontal">
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:checked="true"
                         android:id="@+id/last_sort_asc"/>
            <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                         android:id="@+id/last_sort_desc"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="20dp"
                  android:gravity="center">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/sort_ok"
                android:text="@string/ok"/>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/sort_cancel"
                android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>